edit storm, ship

--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -21,6 +21,8 @@
     <link href="assets/css/common.css" rel="stylesheet" />
     <link href="assets/css/login-page.css" rel="stylesheet" />
     <link href="assets/css/main.css" rel="stylesheet" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
+    <link href="assets/css/push-down.css" rel="stylesheet" />
 
 </head>
 
@@ -97,6 +99,23 @@
     <script src="src/editStorm/stormCtrl.js"></script>
 
     <script src="src/law/lawCtrl.js"></script>
+
+    <script src="src/editWarningLocation/warningLocationCtrl.js"></script>
+    <script src="src/editWarningLocation/warningLocationDataSvc.js"></script>
+
+    <script src="src/pushDown/pushDownCtrl.js"></script>
+    <script src="src/pushDown/pushDownSvc.js"></script>
+    <script src="src/pushDown/push-down.js"></script>
+
+    <script src="src/edit/addShip/addShipCtrl.js"></script>
+    <script src="src/edit/addShip/add-ship.js"></script>
+    <script src="src/edit/editShip/edit-ship.js"></script>
+    <script src="src/edit/editShip/editShipCtrl.js"></script>
+
+    <script src="src/editStorm/addStorm/addStormCtrl.js"></script>
+    <script src="src/editStorm/addStorm/add-storm.js"></script>
+    <script src="src/editStorm/editStorm/editStormCtrl.js"></script>
+    <script src="src/editStorm/editStorm/edit-storm.js"></script>
 </body>
 
 </html>
