--- a/MyThesis/Monitor/app/src/editWarningLocation/warning-location.html
+++ b/MyThesis/Monitor/app/src/editWarningLocation/warning-location.html
@@ -16,15 +16,15 @@
         <li class="main__menu__li"><a href="#/mo-phong">Hành trình tàu</a></li>
         <li class="main__menu__li"><a href="#/tau">Thông Tin Tàu</a></li>
         <li class="main__menu__li" ng-if="vm.currentUser.Id === 1"><a href="#/bao">Thông Tin Bão</a></li>
-        <li class="main__menu__li"><a href="#/canh-bao">Thông Tin Cảnh Báo</a></li>
-        <li class="main__menu__li main__menu__li--active"><a>Thời Tiết</a></li>
+        <li class="main__menu__li main__menu__li--active"><a>Thông Tin Cảnh Báo</a></li>
+        <li class="main__menu__li"><a href="#/thoi-tiet">Thời Tiết</a></li>
         <li class="main__menu__li"><a href="#/phap-luat">Pháp Luật</a></li>
     </ul>
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-12 main__container">
-    <div id="weather-div">
-        <iframe id="weather-iframe" src="http://www.kttv.gov.vn/website/vi-VN/80/13/Default.aspx" scrolling="no" style="width: 100%; height: 1800px;">></iframe>
+    <div class="main__detail container">
+        
     </div>
 </div>
 
