--- a/MyThesis/Monitor/app/src/loginPage/loginPage.html
+++ b/MyThesis/Monitor/app/src/loginPage/loginPage.html
@@ -13,7 +13,7 @@
             <button class="login-page__form__button pull-right" ng-click="vm.login()">Đăng nhập</button>
         </div>
         <div class="form-group">
-            <a href="#/signup" class="control-label login-page__form__ps">Đăng ký tài khoản mới</a>
+            <a href="#/dang-ky" class="control-label login-page__form__ps">Đăng ký tài khoản mới</a>
         </div>
     </form>
 </div>
