--- a/MyThesis/Monitor/app/src/signUpPage/signUpPage.html
+++ b/MyThesis/Monitor/app/src/signUpPage/signUpPage.html
@@ -19,7 +19,7 @@
             <button class="login-page__form__button pull-right" ng-click="vm.createUser()">Đăng ký</button>
         </div>
         <div class="form-group">
-            <a href="#/login" class="control-label login-page__form__ps">Trở về trang đăng nhập</a>
+            <a href="#/dang-nhap" class="control-label login-page__form__ps">Trở về trang đăng nhập</a>
         </div>
     </form>
 </div>
