--- a/MyThesis/Monitor/app/src/editStorm/storm.html
+++ b/MyThesis/Monitor/app/src/editStorm/storm.html
@@ -12,62 +12,46 @@
 
 <div class="col-xs-12 col-sm-12 col-md-12 main__menu">
     <ul class="list-inline main__menu__ul pull-right">
-        <li class="main__menu__li"><a href="#/home">Trang chủ</a></li>
-        <li class="main__menu__li"><a href="#/simulate">Hành trình tàu</a></li>
-        <li class="main__menu__li"><a href="#/edit">Thông Tin Tàu</a></li>
+        <li class="main__menu__li"><a href="#/trang-chu">Trang chủ</a></li>
+        <li class="main__menu__li"><a href="#/mo-phong">Hành trình tàu</a></li>
+        <li class="main__menu__li"><a href="#/tau">Thông Tin Tàu</a></li>
         <li class="main__menu__li main__menu__li--active"><a>Thông Tin Bão</a></li>
-        <li class="main__menu__li"><a href="#/weather">Thời Tiết</a></li>
-        <li class="main__menu__li"><a href="#/law">Pháp Luật</a></li>
+        <li class="main__menu__li"><a href="#/canh-bao">Thông Tin Cảnh Báo</a></li>
+        <li class="main__menu__li"><a href="#/thoi-tiet">Thời Tiết</a></li>
+        <li class="main__menu__li"><a href="#/phap-luat">Pháp Luật</a></li>
     </ul>
 </div>
 
 <div class="col-xs-12 col-sm-12 col-md-12 main__container">
     <div class="main__detail container">
-        <form class="form-horizontal" style="margin-top: 10px;">
-            <div class="form-group">
-                <label class="col-xs-3 col-sm-3 col-md-3 control-label">Số Lượng Bão</label>
-                <label class="col-xs-5 col-sm-5 col-md-5 control-label" style="text-align: left;">{{vm.storms.length}}</label>
+        <div>
+            <ul class="list-inline tvl-menu">
+                <li ng-click="vm.showAddStorm()" class="tvl-menu__li" ng-class="{'tvl-menu__li--active': vm.pushDownSettings.mode.addStorm}">
+                    <span class="glyphicon glyphicon-plus tvl-menu__li-icon "></span>Thêm
+                </li>
+                <li ng-click="vm.showEditStorm()" class="tvl-menu__li" ng-class="{'tvl-menu__li--active': vm.pushDownSettings.mode.editStorm}">
+                    <span class="glyphicon glyphicon-edit tvl-menu__li-icon "></span>Chỉnh Sửa
+                </li>
+            </ul>
+        </div>
+
+        <push-down ng-if="vm.pushDownSettings.isActive">
+            <add-storm ng-if="vm.pushDownSettings.mode.addStorm" handle-after-save="vm.handleAfterSave(stormFromApi)"></add-storm>
+            <edit-storm ng-if="vm.pushDownSettings.mode.editStorm" handle-after-save="vm.handleAfterEditStorm(stormFromApi)" storms="vm.storms"></edit-storm>
+        </push-down>
+
+        <div class="ship-list">
+            <p class="ship-list__heading">Tổng số cơn bão hiện tại: {{vm.storms.length}}</p>
+            <div class="col-xs-6 col-sm-6 col-md-6" ng-repeat="storm in vm.storms">
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-info">Mã cơn bão: {{storm.Id}}</li>
+                    <li class="list-group-item list-group-item-info">Tên bão: {{storm.Name}}</li>
+                    <li class="list-group-item list-group-item-info">Bán kính: {{storm.Radius}}</li>
+                    <li class="list-group-item list-group-item-info">Vĩ độ tâm bão: {{storm.Latitude}}</li>
+                    <li class="list-group-item list-group-item-info">Kinh độ tâm bão: {{storm.Longitude}}</li>
+                </ul>
             </div>
-            <div class="form-group">
-                <label class="col-xs-3 col-sm-3 col-md-3 control-label">Mã Cơn Bão</label>
-                <div class="col-xs-5 col-sm-5 col-md-5">
-                    <select class="form-control" ng-options="item as item.Id for item in vm.storms" ng-model="vm.selectedStorm"></select>
-                </div>
-            </div>
-            <div ng-if="vm.selectedStorm.Id">
-                <div class="form-group">
-                    <label for="stormName" class="col-xs-3 col-sm-3 col-md-3 control-label">Tên Bão</label>
-                    <div class="col-xs-5 col-sm-5 col-md-5">
-                        <input id="stormName" class="form-control" placeholder="Tên bão" type="text" ng-model="vm.selectedStorm.Name" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="stormRadius" class="col-xs-3 col-sm-3 col-md-3 control-label">Bán Kính</label>
-                    <div class="col-xs-5 col-sm-5 col-md-5">
-                        <input id="stormRadius" class="form-control" placeholder="Bán kính" type="number" ng-model="vm.selectedStorm.Radius" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="stormLatitude" class="col-xs-3 col-sm-3 col-md-3 control-label">Vĩ Độ Tâm Bão</label>
-                    <div class="col-xs-5 col-sm-5 col-md-5">
-                        <input id="stormLatitude" class="form-control" placeholder="Vĩ độ tâm bão" type="number" ng-model="vm.selectedStorm.Latitude" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="stormLongitude" class="col-xs-3 col-sm-3 col-md-3 control-label">Kinh Độ Tâm Bão</label>
-                    <div class="col-xs-5 col-sm-5 col-md-5">
-                        <input id="stormLongitude" class="form-control" placeholder="Kinh độ tâm bão" type="number" ng-model="vm.selectedStorm.Longitude" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-xs-3 col-sm-3 col-md-3"></div>
-                    <div class="col-xs-5 col-sm-5 col-md-5">
-                        <button ng-click="vm.updateStorm()" class="login-page__form__button" style="border-color: #244f95; color: #244f95; background-color: white;">Lưu Thay Đổi</button>
-                        <button ng-click="vm.deleteStorm()" class="login-page__form__button" style="border-color: #244f95; color: #244f95;">Xóa Bão</button>
-                    </div>
-                </div>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
