--- a/MyThesis/Monitor/app/src/simulate/simulate.html
+++ b/MyThesis/Monitor/app/src/simulate/simulate.html
@@ -11,12 +11,13 @@
 
 <div class="col-xs-12 col-sm-12 col-md-12 main__menu">
     <ul class="list-inline main__menu__ul pull-right">
-        <li class="main__menu__li"><a href="#/home">Trang chủ</a></li>
+        <li class="main__menu__li"><a href="#/trang-chu">Trang chủ</a></li>
         <li class="main__menu__li main__menu__li--active"><a>Hành trình tàu</a></li>
-        <li class="main__menu__li"><a href="#/edit">Thông Tin Tàu</a></li>
-        <li class="main__menu__li" ng-if="vm.currentUser.Id === 1"><a href="#/storm">Thông Tin Bão</a></li>
-        <li class="main__menu__li"><a href="#/weather">Thời Tiết</a></li>
-        <li class="main__menu__li"><a href="#/law">Pháp Luật</a></li>
+        <li class="main__menu__li"><a href="#/tau">Thông Tin Tàu</a></li>
+        <li class="main__menu__li" ng-if="vm.currentUser.Id === 1"><a href="#/bao">Thông Tin Bão</a></li>
+        <li class="main__menu__li"><a href="#/canh-bao">Thông Tin Cảnh Báo</a></li>
+        <li class="main__menu__li"><a href="#/thoi-tiet">Thời Tiết</a></li>
+        <li class="main__menu__li"><a href="#/phap-luat">Pháp Luật</a></li>
     </ul>
 </div>
 
