--- a/MyThesis/Monitor/app/index.html
+++ b/MyThesis/Monitor/app/index.html
@@ -116,6 +116,11 @@
     <script src="src/editStorm/addStorm/add-storm.js"></script>
     <script src="src/editStorm/editStorm/editStormCtrl.js"></script>
     <script src="src/editStorm/editStorm/edit-storm.js"></script>
+
+    <script src="src/editWarningLocation/addWarning/addWarningCtrl.js"></script>
+    <script src="src/editWarningLocation/addWarning/add-warning.js"></script>
+    <script src="src/editWarningLocation/editWarning/editWarningCtrl.js"></script>
+    <script src="src/editWarningLocation/editWarning/edit-warning.js"></script>
 </body>
 
 </html>
