--- a/MyThesis/Monitor/app/src/edit/edit.html
+++ b/MyThesis/Monitor/app/src/edit/edit.html
@@ -46,9 +46,9 @@
                     <li class="list-group-item list-group-item-info">Mã tàu: {{ship.Id}}</li>
                     <li class="list-group-item list-group-item-info">Loại tàu: {{ship.ShipType ===0 ? 'Tàu đánh cá': ship.ShipType}}</li>
                     <li class="list-group-item list-group-item-info">Thuyền trưởng: {{ship.Caption}}</li>
-                    <li class="list-group-item list-group-item-info">Số thuyền viên: {{ship.Sailors}}</li>
-                    <li class="list-group-item list-group-item-info">Vận tốc: {{ship.Speed}}</li>
-                    <li class="list-group-item list-group-item-info">Trọng tải: {{ship.Weight}}</li>
+                    <li class="list-group-item list-group-item-info">Số thuyền viên: {{ship.Sailors}} người</li>
+                    <li class="list-group-item list-group-item-info">Vận tốc: {{ship.Speed}} km/h</li>
+                    <li class="list-group-item list-group-item-info">Trọng tải: {{ship.Weight}} kg</li>
                 </ul>
             </div>
         </div>
