--- a/MyThesis/Monitor/app/src/editStorm/storm.html
+++ b/MyThesis/Monitor/app/src/editStorm/storm.html
@@ -46,7 +46,7 @@
                 <ul class="list-group">
                     <li class="list-group-item list-group-item-info">Mã cơn bão: {{storm.Id}}</li>
                     <li class="list-group-item list-group-item-info">Tên bão: {{storm.Name}}</li>
-                    <li class="list-group-item list-group-item-info">Bán kính: {{storm.Radius}}</li>
+                    <li class="list-group-item list-group-item-info">Bán kính: {{storm.Radius}} km</li>
                     <li class="list-group-item list-group-item-info">Vĩ độ tâm bão: {{storm.Latitude}}</li>
                     <li class="list-group-item list-group-item-info">Kinh độ tâm bão: {{storm.Longitude}}</li>
                 </ul>
