--- a/MyThesis/Monitor/app/src/editStorm/editStorm/edit-storm.html
+++ b/MyThesis/Monitor/app/src/editStorm/editStorm/edit-storm.html
@@ -1,6 +1,6 @@
 ﻿<form class="form-horizontal">
     <div class="form-group">
-        <label class="col-sm-6 control-label push-down__heading">Chỉnh Sửa thông tin bão</label>
+        <label class="col-sm-6 control-label push-down__heading">Chỉnh Sửa Thông Tin Bão</label>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label push-down__label ">Mã cơn bão</label>
