--- a/MyThesis/Simulator/app/src/addShip/add-ship.html
+++ b/MyThesis/Simulator/app/src/addShip/add-ship.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 <div class="form-group">
-    <label for="shipSailors" class="control-label">Thuyền trưởng</label>
+    <label for="shipSailors" class="control-label">Số lượng thuyền viên</label>
     <div class="push-down__input-wrapper">
         <input id="shipSailors" type="number" class="form-control" ng-model="vm.newShip.Sailors" placeholder="Số lượng thuyền viên">
     </div>
