--- a/MyThesis/Simulator/app/index.html
+++ b/MyThesis/Simulator/app/index.html
@@ -19,7 +19,7 @@
 
 <body ng-controller="homeCtrl as vm">
     <div class="col-xs-12 col-sm-12 col-md-12 home__navbar">
-        <span class="home__navbar__brand">THESIS</span>
+        <img src="assets/images/logo.png" height="80px"/>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-12 home__menu">
         <ul class="list-inline home__menu__ul">
@@ -58,31 +58,9 @@
     <div class="col-xs-12 col-sm-12 col-md-12 author">
         <div class="author__text">@Trương Văn Linh - Nguyễn Thành Vinh</div>
     </div>
-    <!--<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
-        <ul class="nav menu">
-            <li class="clickable-element"><a ng-click="vm.openCreateShipDialog()"><span class="menu-icon ion-android-boat"></span>Thêm tàu</a></li>
-            <li class="clickable-element"><a ng-click="vm.openCreateWarningLocationDialog()"><span class="menu-icon ion-android-pin"></span>Thêm cảnh báo</a></li>
-            <li class="clickable-element"><a ng-click="vm.openCreateStormDialog()"><span class="menu-icon ion-ios-thunderstorm-outline"></span>Thêm bão</a></li>
-            <li class="clickable-element"><a ng-click="vm.openSimulatorSettingDialog()"><span class="menu-icon ion-android-settings"></span>Cài đặt</a></li>
-
-        </ul>
-    </div>
-
-    <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Danh sách tàu</h2>
-                <div ng-repeat="ship in vm.ships">
-                    <ship ship-info="ship" ship-index="$index" setting-timeout="vm.settingTimeout" overlay="vm.overlay"></ship>
-                </div>
-            </div>
-        </div>
-
-    </div>-->
-
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="overlay" id="overlay">
-            <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinnerSearch" spinner-start-active="false"></span>
+            <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinnerSearch" spinner-start-active="true"></span>
         </div>
     </div>
 
