--- a/MyThesis/Simulator/app/src/addStorm/add-storm.html
+++ b/MyThesis/Simulator/app/src/addStorm/add-storm.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div class="form-group">
-    <label for="stormLongitude" class="control-label">Kinh độ độ tâm bão</label>
+    <label for="stormLongitude" class="control-label">Kinh độ tâm bão</label>
     <div class="push-down__input-wrapper">
         <input id="stormLongitude" type="number" class="form-control" ng-model="vm.storm.Longitude" placeholder="Kinh độ tâm bão">
     </div>
